[tool.poetry]
name = "dagster"
version = "0.5.4"
description = "Dagster is an opinionated programming model for data pipelines."
authors = ["Elementl <hello@elementl.io>"]
license = "Apache-2.0"
homepage = "https://dagster.readthedocs.io/"
repository = "https://github.com/dagster-io/dagster"
documentation = "https://dagster.readthedocs.io/"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]
packages = [
    {include = "dagster"}
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

click = ">=6.7"
coloredlogs = ">=6.1"
contextlib2 = ">=0.5.4"
enum34 = {version = "*", python = "<=3.4"}
funcsigs = "1.0.0"  # pinned for compatibility with existing Airflow installs
future = "^0.16.0" # pinned to range for compatibility with Airflow
graphviz = ">=0.8.4"
PyYAML = ">= 3.10, < 5" # pinned for compatibility with docker-compose
six = ">=1.11.0"
toposort = ">=1.0"


[tool.poetry.dev-dependencies]
black = { version = "18.9b0", python = "^3.6" }
docutils = "<0.15.1"  # https://sourceforge.net/p/docutils/bugs/370/
nbsphinx = "0.4.2"
pre-commit = "1.10.1"
pylint = {version = "2.3.0", python = "^3.6"}
pytest = "4.6.3"
pytest-cov = "2.7.1"
pytest-dependency = "0.4.0"
pytest-runner = "5.1"
recommonmark = "0.4.0"
rope = "0.11"
snapshottest = "0.5.0"
tox = "3.6.1"
twine = "1.11.0"

[tool.poetry.scripts]
dagster = "dagster.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
